2023-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	Accept a second argument to `HU`.

	* m.tmac (HU): Pass `H` all of our arguments.  Also validate
	quantity of arguments and throw error if called with none.

	Fixes <https://savannah.gnu.org/bugs/?64204>.

2023-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	Slightly revise index output.

	* m.tmac (INDP): Call `SK` if `TXIND` is not defined, instead of
	as the first thing if `TYIND` is not defined.  This is easier to
	rationalize in the documentation as something that happens
	before the index caption is written.  This way any page breaking
	or spacing prior to the index is strictly `TXIND`'s
	responsibility, and the formatting of the index caption itself,
	followed by any formatting changes appropriate to the index
	entries, belongs to `TYIND`.

2023-07-04 G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (IND): Use `hd@mark-trimmed` instead of `hd*mark` in
	index entries, just as is done with references; we don't want
	trailing spaces in it.

2023-05-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	Improve input validation of `INITI`, `IND` macros.

	* m.tmac (INITI): Validate the index type (first argument) here
	instead of only later when `IND` is called.  Actually verify
	that the second argument is present and usable.
	(IND): Verify that we're given arguments.

	Fixes <https://savannah.gnu.org/bugs/?64205>.

2023-05-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (Indcmd): Drop relic string.  Nothing interpolates it;
	it hasn't been used since before groff 1.16 (February 2000).

2023-05-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (let@print-head): Unconditionally `sp`ace after setting
	the text produced by ".LO SJ", instead of only doing so if the
	letter type was not "simplified" (".LT SP").

	Fixes <https://savannah.gnu.org/bugs/?64209>.

2023-05-17  G. Branden Robinson <g.branden.robinson@gmail.com>
