@@ -1,5 +1,12 @@
 2023-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	Regression-test Savannah #63695.
+
+	* tests/LT-should-space-after-inside-address.sh: Do it.
+	* mm.am (mm_TESTS): Run test.
+
+2023-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	Accept a second argument to `HU`.
 
 	* m.tmac (HU): Pass `H` all of our arguments.  Also validate
